test/visibility/only/inheritance-subclassListed.good
inheritance-subclassListed.chpl:30: In function 'main':
inheritance-subclassListed.chpl:32: error: unresolved call 'owned Child.tertiaryMethod()'
inheritance-subclassListed.chpl:32: note: because no functions named tertiaryMethod found in scope
